@@ -80,7 +80,7 @@ public class PolygonSpriteBatch implements Batch {
 	private ShaderProgram customShader;
 	private boolean ownsShader;
 
-	float color = Color.WHITE.toFloatBits();
+	float color = Color.WHITE_FLOAT_BITS;
 	private Color tempColor = new Color(1, 1, 1, 1);
 
 	/** Number of render calls since the last {@link #begin()}. **/
